# lstar-rocq

./: .gitignore  CHANGES.md  Makefile  README.md  dune-project  lstar-rocq.opam  lstar.opam  lstar.opam.template
docs/: DFA.html  ExtrOptimizations.html  KV.html  ListLemmas.html  Lstar.html  index.html  index_axiom_F.html  index_axiom_L.html  index_axiom_S.html  index_axiom_T.html  index_constructor_K.html  index_definition_D.html  index_definition_E.html  index_definition_K.html  index_definition_L.html  index_definition_Q.html  index_definition_S.html  index_global_D.html  index_global_E.html  index_global_F.html  index_global_K.html  index_global_L.html  index_global_N.html  index_global_S.html  index_global_T.html  index_inductive_K.html  index_instance_L.html  index_lemma_F.html  index_lemma_K.html  index_lemma_L.html  index_lemma_M.html  index_lemma_N.html  index_lemma_S.html  index_library_D.html  index_library_E.html  index_library_K.html  index_library_L.html  index_module_D.html  index_module_K.html  index_module_L.html  (+8 more)
examples/: alternating.ml  div7.ml  mod3.ml
lib/: Datatypes.ml  Extraction.v  Language.ml  List.ml  ListLemmas.ml  Lstar.ml  Specif.ml  Teacher.ml  dune
theories/: DFA.v  ExtrOptimizations.v  KV.v  ListLemmas.v  Lstar.v  Teacher.v  dune
