(lang dune 3.21)
(using rocq 0.11)

(name lstar-rocq)

(generate_opam_files true)

(source
 (github CharlesAverill/lstar-rocq))

(authors
 "Charles Averill <charlesaverill20@gmail.com>")

(maintainers
 "Charles Averill <charlesaverill20@gmail.com>")

(license MIT)

(documentation https://github.com/CharlesAverill/lstar-rocq)

(package
 (name lstar-rocq)
 (synopsis "Formally-verified L* implemented in Rocq")
 (description "A formally-verified implementation of the L* algorithm in Rocq")
 (depends
   (dune (>= 3.21.0))
   (rocq-core (>= 9.1.0))
   rocq-prover
   rocq-stdlib
   rocq-runtime))

(package
 (name lstar)
 (synopsis "L* extracted from lstar-rocq")
 (description "A formally-verified implementation of the L* algorithm")
 (depends
   (dune (>= 3.21.0))
   (rocq-core (>= 9.1.0))
   rocq-prover
   rocq-stdlib
   rocq-runtime
   lstar-rocq))

